INCLUDE/WIN16/OLECTL.H


typedef OLECHAR FAR* LPOLESTR;

typedef const OLECHAR FAR* LPCOLESTR;

interface IEnumConnections;

interface IClassFactory2;

interface ISpecifyPropertyPages;

interface IPerPropertyBrowsing;

interface IPropertyPageSite;

interface IPropertyPage;

interface IPropertyPage2;

interface IFont;

interface IFontDisp;

interface IPicture;

interface IPictureDisp;

typedef interface IEnumConnections IEnumConnections;

typedef interface IClassFactory2 IClassFactory2;

typedef interface ISpecifyPropertyPages ISpecifyPropertyPages;

typedef interface IPerPropertyBrowsing IPerPropertyBrowsing;

typedef interface IPropertyPageSite IPropertyPageSite;

typedef interface IPropertyPage IPropertyPage;

typedef interface IPropertyPage2 IPropertyPage2;

typedef interface IFont IFont;

typedef interface IFontDisp IFontDisp;

typedef interface IPicture IPicture;

typedef interface IPictureDisp IPictureDisp;

typedef struct tagOCPFIPARAMS FAR* LPOCPFIPARAMS;

typedef long OLE_XPOS_HIMETRIC;

typedef long OLE_YPOS_HIMETRIC;

typedef long OLE_XSIZE_HIMETRIC;

typedef long OLE_YSIZE_HIMETRIC;

typedef UINT OLE_HANDLE;


STDAPI OleCreatePropertyFrameIndirect(LPOCPFIPARAMS lpParams);



/////////////////////////////////////////////////////////////////////////////
// LICINFO structure

typedef struct tagLICINFO
{
	long cbLicInfo;
	BOOL fRuntimeKeyAvail;
	BOOL fLicVerified;

} LICINFO;


/////////////////////////////////////////////////////////////////////////////
// OCPFIPARAMS structure - parameters for OleCreatePropertyFrameIndirect

typedef struct tagOCPFIPARAMS
{
	ULONG cbStructSize;
	HWND hWndOwner;
	int x;
	int y;
	LPCOLESTR lpszCaption;
	ULONG cObjects;
	LPUNKNOWN FAR* lplpUnk;
	ULONG cPages;
	CLSID FAR* lpPages;
	LCID lcid;
	DISPID dispidInitialProperty;

} OCPFIPARAMS;



/////////////////////////////////////////////////////////////////////////////
// PROPPAGEINFO structure - information about a property page

typedef struct tagPROPPAGEINFO
{
	size_t cb;
	LPOLESTR pszTitle;
	SIZE size;
	LPOLESTR pszDocString;
	LPOLESTR pszHelpFile;
	DWORD dwHelpContext;

} PROPPAGEINFO;

typedef struct tagFONTDESC
{
	UINT cbSizeofstruct;
	LPOLESTR lpstrName;
	CY cySize;
	SHORT sWeight;
	SHORT sCharset;
	BOOL fItalic;
	BOOL fUnderline;
	BOOL fStrikethrough;

} FONTDESC;
#define PICTYPE_BITMAP		1
#define PICTYPE_METAFILE	2
#define PICTYPE_ICON		3

typedef struct tagPICTDESC
{
	UINT cbSizeofstruct;
	UINT picType;
	union
	{
		struct
		{
			HBITMAP   hbitmap;        // Bitmap
			HPALETTE  hpal;           // Accompanying palette
		} bmp;

		struct
		{
			HMETAFILE hmeta;          // Metafile
			int       xExt;
			int       yExt;           // Extent
		} wmf;

		struct
		{
			HICON hicon;              // Icon
		} icon;

#ifdef _WIN32
		struct
		{
			HENHMETAFILE hemf;        // Enhanced Metafile
		} emf;
#endif
	}
#if defined(NONAMELESSUNION)
	u
#endif
	;

} PICTDESC;