INCLUDE/Vcl/OLECTL.HPP



typedef tagTEXTMETRICW  TTextMetricOle;


typedef tagLICINFO *PLicInfo;


typedef tagLICINFO  TLicInfo;


typedef GUID TGUIDList[65536];


typedef GUID *PGUIDList;


struct TCAGUID
{
	int cElems;
	GUID *pElems;
} ;


typedef TCAGUID *PCAGUID;


struct TCAPOleStr;

typedef TCAPOleStr *PCAPOleStr;


struct TCAPOleStr
{
	int cElems;
	wchar_t * *pElems;
} ;


typedef int TLongintList[65536];


typedef int *PLongintList;


struct TCALongint
{
	int cElems;
	int *pElems;
} ;


typedef TCALongint *PCALongint;


typedef tagOCPFIPARAMS *POCPFIParams;


typedef tagOCPFIPARAMS  TOCPFIParams;


typedef tagPROPPAGEINFO *PPropPageInfo;


typedef tagPROPPAGEINFO  TPropPageInfo;


typedef tagFONTDESC *PFontDesc;


typedef tagFONTDESC  TFontDesc;


typedef tagPICTDESC *PPictDesc;


typedef tagPICTDESC  TPictDesc;