SOURCE/Vcl/OLECTL.PAS


  {$EXTERNALSYM IEnumConnections}
  IEnumConnections = class(IUnknown)
  public
    function Next(celt: Longint; var elt;
      pceltFetched: PLongint): HResult; virtual; stdcall; abstract;
    function Skip(celt: Longint): HResult; virtual; stdcall; abstract;
    function Reset: HResult; virtual; stdcall; abstract;
    function Clone(var Enum: IEnumConnections): HResult; virtual; stdcall; abstract;
  end;

{ TLicInfo structure }

  PLicInfo = ^TLicInfo;
  {$EXTERNALSYM tagLICINFO}
  tagLICINFO = record
    cbLicInfo: Longint;
    fRuntimeKeyAvail: BOOL;
    fLicVerified: BOOL;
  end;
  TLicInfo = tagLICINFO;
  {$EXTERNALSYM LICINFO}
  LICINFO = tagLICINFO;

{ IClassFactory2 interface }

  {$EXTERNALSYM IClassFactory2 }
  IClassFactory2 = class(IClassFactory)
    function GetLicInfo(var licInfo: TLicInfo): HResult; virtual; stdcall; abstract;
    function RequestLicKey(dwResrved: Longint; var bstrKey: TBStr): HResult;
      virtual; stdcall; abstract;
    function CreateInstanceLic(unkOuter: IUnknown; unkReserved: IUnknown;
      const iid: TIID; bstrKey: TBStr; var vObject): HResult; virtual; stdcall; abstract;
  end;

{ TCAUUID structure - a counted array of TGUID }

  PGUIDList = ^TGUIDList;
  TGUIDList = array[0..65535] of TGUID;

  PCAGUID = ^TCAGUID;
  TCAGUID = record
    cElems: Longint;
    pElems: PGUIDList;
  end;

{ TCAPOleStr structure - a counted array of POleStr }

  PCAPOleStr = ^TCAPOleStr;
  TCAPOleStr = record
    cElems: Longint;
    pElems: POleStrList;
  end;

{ TCALongint - a counted array of Longint }

  PLongintList = ^TLongintList;
  TLongintList = array[0..65535] of Longint;

  PCALongint = ^TCALongint;
  TCALongint = record
    cElems: Longint;
    pElems: PLongintList;
  end;

{ TOCPFIParams - parameters for OleCreatePropertyFrameIndirect }

  POCPFIParams = ^TOCPFIParams;
  {$EXTERNALSYM tagOCPFIPARAMS}
  tagOCPFIPARAMS = record
    cbStructSize: Longint;
    hWndOwner: HWnd;
    x: Integer;
    y: Integer;
    lpszCaption: POleStr;
    cObjects: Longint;
    pObjects: Pointer;
    cPages: Longint;
    pPages: Pointer;
    lcid: TLCID;
    dispidInitialProperty: TDispID;
  end;
  TOCPFIParams = tagOCPFIPARAMS;
  {$EXTERNALSYM OCPFIPARAMS}
  OCPFIPARAMS = tagOCPFIPARAMS;

{ TPropPageInfo structure - information about a property page }

  PPropPageInfo = ^TPropPageInfo;
  {$EXTERNALSYM tagPROPPAGEINFO}
  tagPROPPAGEINFO = record
    cb: Longint;
    pszTitle: POleStr;
    size: TSize;
    pszDocString: POleStr;
    pszHelpFile: POleStr;
    dwHelpContext: Longint;
  end;
  TPropPageInfo = tagPROPPAGEINFO;
  {$EXTERNALSYM PROPPAGEINFO}
  PROPPAGEINFO = tagPROPPAGEINFO;

{ ISpecifyPropertyPages interface }

  {$EXTERNALSYM ISpecifyPropertyPages }
  ISpecifyPropertyPages = class(IUnknown)
  public
    function GetPages(var pages: TCAGUID): HResult; virtual; stdcall; abstract;
  end;

{ IPerPropertyBrowsing interface }

  {$EXTERNALSYM IPerPropertyBrowsing}
  IPerPropertyBrowsing = class(IUnknown)
  public
    function GetDisplayString(dispid: TDispID; var bstr: TBStr): HResult;
      virtual; stdcall; abstract;
    function MapPropertyToPage(dispid: TDispID; var clsid: TCLSID): HResult;
      virtual; stdcall; abstract;
    function GetPredefinedStrings(dispid: TDispID; var caStringsOut: TCAPOleStr;
      var caCookiesOut: TCALongint): HResult; virtual; stdcall; abstract;
    function GetPredefinedValue(dispid: TDispID; dwCookie: Longint;
      var varOut: Variant): HResult; virtual; stdcall; abstract;
  end;

{ IPropertyPageSite interface }

  {$EXTERNALSYM IPropertyPageSite}
  IPropertyPageSite = class(IUnknown)
  public
    function OnStatusChange(flags: Longint): HResult; virtual; stdcall; abstract;
    function GetLocaleID(var localeID: TLCID): HResult; virtual; stdcall; abstract;
    function GetPageContainer(var unk: IUnknown): HResult; virtual; stdcall; abstract;
    function TranslateAccelerator(msg: PMsg): HResult; virtual; stdcall; abstract;
  end;

{ IPropertyPage interface }

  {$EXTERNALSYM IPropertyPage }
  IPropertyPage = class(IUnknown)
  public
    function SetPageSite(pageSite: IPropertyPageSite): HResult; virtual; stdcall; abstract;
    function Activate(hwndParent: HWnd; const rc: TRect; bModal: BOOL): HResult;
      virtual; stdcall; abstract;
    function Deactivate: HResult; virtual; stdcall; abstract;
    function GetPageInfo(var pageInfo: TPropPageInfo): HResult; virtual; stdcall; abstract;
    function SetObjects(cObjects: Longint; unk: IUnknown): HResult; virtual; stdcall; abstract;
    function Show(nCmdShow: Integer): HResult; virtual; stdcall; abstract;
    function Move(const rect: TRect): HResult; virtual; stdcall; abstract;
    function IsPageDirty: HResult; virtual; stdcall; abstract;
    function Apply: HResult; virtual; stdcall; abstract;
    function Help(pszHelpDir: POleStr): HResult; virtual; stdcall; abstract;
    function TranslateAccelerator(msg: PMsg): HResult; virtual; stdcall; abstract;
  end;

{ IPropertyPage2 interface }

  {$EXTERNALSYM IPropertyPage2 }
  IPropertyPage2 = class(IPropertyPage)
  public
    function EditProperty(dispid: TDispID): HResult; virtual; stdcall; abstract;
  end;

{ IFont interface }

  {$EXTERNALSYM IFont }
  IFont = class(IUnknown)
  public
    function get_Name(var name: TBStr): HResult; virtual; stdcall; abstract;
    function put_Name(name: TBStr): HResult; virtual; stdcall; abstract;
    function get_Size(var size: TCurrency): HResult; virtual; stdcall; abstract;
    function put_Size(size: TCurrency): HResult; virtual; stdcall; abstract;
    function get_Bold(var bold: BOOL): HResult; virtual; stdcall; abstract;
    function put_Bold(bold: BOOL): HResult; virtual; stdcall; abstract;
    function get_Italic(var italic: BOOL): HResult; virtual; stdcall; abstract;
    function put_Italic(italic: BOOL): HResult; virtual; stdcall; abstract;
    function get_Underline(var underline: BOOL): HResult; virtual; stdcall; abstract;
    function put_Underline(underline: BOOL): HResult; virtual; stdcall; abstract;
    function get_Strikethrough(var strikethrough: BOOL): HResult; virtual; stdcall; abstract;
    function put_Strikethrough(strikethrough: BOOL): HResult; virtual; stdcall; abstract;
    function get_Weight(var weight: Smallint): HResult; virtual; stdcall; abstract;
    function put_Weight(weight: Smallint): HResult; virtual; stdcall; abstract;
    function get_Charset(var charset: Smallint): HResult; virtual; stdcall; abstract;
    function put_Charset(charset: Smallint): HResult; virtual; stdcall; abstract;
    function get_hFont(var font: HFont): HResult; virtual; stdcall; abstract;
    function Clone(var font: IFont): HResult; virtual; stdcall; abstract;
    function IsEqual(fontOther: IFont): HResult; virtual; stdcall; abstract;
    function SetRatio(cyLogical, cyHimetric: Longint): HResult; virtual; stdcall; abstract;
    function QueryTextMetrics(var tm: TTextMetricOle): HResult; virtual; stdcall; abstract;
    function AddRefHfont(font: HFont): HResult; virtual; stdcall; abstract;
    function ReleaseHfont(font: HFont): HResult; virtual; stdcall; abstract;
  end;

{ IFontDisp interface }

  {$EXTERNALSYM IFontDisp}
  IFontDisp = class(IDispatch);

{ TFontDesc structure }

  PFontDesc = ^TFontDesc;
  {$EXTERNALSYM tagFONTDESC}
  tagFONTDESC = record
    cbSizeofstruct: Integer;
    lpstrName: POleStr;
    cySize: Comp;
    sWeight: Smallint;
    sCharset: Smallint;
    fItalic: BOOL;
    fUnderline: BOOL;
    fStrikethrough: BOOL;
  end;
  TFontDesc = tagFONTDESC;
  {$EXTERNALSYM FONTDESC}
  FONTDESC = tagFONTDESC;

{ IPicture interface }

  {$EXTERNALSYM IPicture}
  IPicture = class(IUnknown)
  public
    function get_Handle(var handle: OLE_HANDLE): HResult;  virtual; stdcall; abstract;
    function get_hPal(var handle: OLE_HANDLE): HResult; virtual; stdcall; abstract;
    function get_Type(var typ: Smallint): HResult; virtual; stdcall; abstract;
    function get_Width(var width: OLE_XSIZE_HIMETRIC): HResult; virtual; stdcall; abstract;
    function get_Height(var height: OLE_YSIZE_HIMETRIC): HResult; virtual; stdcall; abstract;
    function Render(dc: HDC; x, y, cx, cy: Longint;
      xSrc: OLE_XPOS_HIMETRIC; ySrc: OLE_YPOS_HIMETRIC;
      cxSrc: OLE_XSIZE_HIMETRIC; cySrc: OLE_YSIZE_HIMETRIC;
      const rcWBounds: TRect): HResult; virtual; stdcall; abstract;
    function set_hPal(hpal: OLE_HANDLE): HResult; virtual; stdcall; abstract;
    function get_CurDC(var dcOut: HDC): HResult; virtual; stdcall; abstract;
    function SelectPicture(dcIn: HDC; var hdcOut: HDC;
      var bmpOut: OLE_HANDLE): HResult; virtual; stdcall; abstract;
    function get_KeepOriginalFormat(var fkeep: BOOL): HResult; virtual; stdcall; abstract;
    function put_KeepOriginalFormat(fkeep: BOOL): HResult; virtual; stdcall; abstract;
    function PictureChanged: HResult; virtual; stdcall; abstract;
    function SaveAsFile(stream: IStream; fSaveMemCopy: BOOL;
      var cbSize: Longint): HResult; virtual; stdcall; abstract;
    function get_Attributes(dwAttr: Longint): HResult; virtual; stdcall; abstract;
  end;

{ IPictureDisp interface }

  {$EXTERNALSYM IPictureDisp}
  IPictureDisp = class(IDispatch);

{ TPictDesc structure }

  PPictDesc = ^TPictDesc;
  {$EXTERNALSYM tagPICTDESC}
  tagPICTDESC = record
    cbSizeofstruct: Integer;
    picType: Integer;
    case Integer of
      PICTYPE_BITMAP: (
        hbitmap: THandle;       { Bitmap }
        hpal: THandle);         { Accompanying palette }
      PICTYPE_METAFILE: (
        hMeta: THandle;         { Metafile }
        xExt, yExt: Integer);   { Extent }
      PICTYPE_ICON: (
        hIcon: THandle);        { Icon }
  end;
  TPictDesc = tagPICTDESC;
  {$EXTERNALSYM PICTDESC}
  PICTDESC = tagPICTDESC;

const

{ Standard interface IDs }
